{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 43,
  "lineage": "a59be00a-c6ac-c6dd-3a43-ee261e3d3b35",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-pro-m3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382436298:internet-gateway/igw-02055f1db322d0b91",
            "id": "igw-02055f1db322d0b91",
            "owner_id": "992382436298",
            "tags": {
              "Name": "part3s-igw-pro-m3"
            },
            "tags_all": {
              "Name": "part3s-igw-pro-m3"
            },
            "vpc_id": "vpc-090eb9b12f8cd5777"
          },
          "dependencies": [
            "aws_vpc.vpc-pro-m3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb-pro-m3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382436298:route-table/rtb-0aa0eea4a8bb42c7e",
            "id": "rtb-0aa0eea4a8bb42c7e",
            "owner_id": "992382436298",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02055f1db322d0b91",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "part3s-rtb"
            },
            "tags_all": {
              "Name": "part3s-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-090eb9b12f8cd5777"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-pro-m3",
            "aws_vpc.vpc-pro-m3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d90b7e0bb0c77262",
            "route_table_id": "rtb-0aa0eea4a8bb42c7e",
            "subnet_id": "subnet-04585a63009f3ca58"
          },
          "dependencies": [
            "aws_internet_gateway.igw-pro-m3",
            "aws_route_table.rtb-pro-m3",
            "aws_subnet.subnets",
            "aws_vpc.vpc-pro-m3",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2a133c18d546725",
            "route_table_id": "rtb-0aa0eea4a8bb42c7e",
            "subnet_id": "subnet-0c080d225210a28ae"
          },
          "dependencies": [
            "aws_internet_gateway.igw-pro-m3",
            "aws_route_table.rtb-pro-m3",
            "aws_subnet.subnets",
            "aws_vpc.vpc-pro-m3",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382436298:security-group/sg-0cef4104010f6608a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cef4104010f6608a",
            "ingress": [],
            "name": "terraform-20240629094554190400000001",
            "name_prefix": "terraform-",
            "owner_id": "992382436298",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "part3s-sg"
            },
            "tags_all": {
              "Name": "part3s-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-090eb9b12f8cd5777"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-pro-m3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382436298:subnet/subnet-04585a63009f3ca58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04585a63009f3ca58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382436298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "part3s-subnet-0"
            },
            "tags_all": {
              "Name": "part3s-subnet-0"
            },
            "vpc_id": "vpc-090eb9b12f8cd5777"
          },
          "dependencies": [
            "aws_vpc.vpc-pro-m3",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382436298:subnet/subnet-0c080d225210a28ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c080d225210a28ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382436298",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "part3s-subnet-1"
            },
            "tags_all": {
              "Name": "part3s-subnet-1"
            },
            "vpc_id": "vpc-090eb9b12f8cd5777"
          },
          "dependencies": [
            "aws_vpc.vpc-pro-m3",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-pro-m3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382436298:vpc/vpc-090eb9b12f8cd5777",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0770fbaa19ff8d313",
            "default_route_table_id": "rtb-09ddafd9dbf445089",
            "default_security_group_id": "sg-05e94b3d9e511e0c2",
            "dhcp_options_id": "dopt-00dfea52cde6499d8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090eb9b12f8cd5777",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ddafd9dbf445089",
            "owner_id": "992382436298",
            "tags": {
              "Name": "part3s-vpc-pro-m3"
            },
            "tags_all": {
              "Name": "part3s-vpc-pro-m3"
            }
          }
        }
      ]
    }
  ]
}